[gd_scene load_steps=6 format=3 uid="uid://mxwv73uwb2qi"]

[ext_resource type="Texture2D" uid="uid://byio0luq7uppw" path="res://assets/images/Background/StarField.png" id="1_t7ikn"]
[ext_resource type="Script" path="res://src/scripts/Lesson/Prelim/Prelim_1.9.gd" id="1_us3xc"]
[ext_resource type="PackedScene" uid="uid://r7v4w30c0k7l" path="res://src/scenes/Components/Pause.tscn" id="2_qhts8"]
[ext_resource type="PackedScene" uid="uid://c8lo8combalxg" path="res://src/scenes/Components/NavigationControls.tscn" id="4_q53xy"]
[ext_resource type="Texture2D" uid="uid://bf467fro81slf" path="res://assets/images/Lesson/Prelim/prelim_1.9.png" id="5_tiw6g"]

[node name="Prelim1_9" type="Node2D"]
script = ExtResource("1_us3xc")

[node name="StarField" type="Sprite2D" parent="."]
position = Vector2(963.999, 541.998)
scale = Vector2(1.88281, 1.05859)
texture = ExtResource("1_t7ikn")
metadata/_edit_lock_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 68.0
offset_top = 162.0
offset_right = 1380.0
offset_bottom = 1019.0
theme_override_constants/separation = 30

[node name="Header" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 80
text = "Rich Text"
fit_content = true

[node name="DetailOne" type="RichTextLabel" parent="VBoxContainer"]
visible = false
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Rich Text"
fit_content = true

[node name="DetailTwo" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Rich Text"
fit_content = true

[node name="DetailThree" type="RichTextLabel" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/normal_font_size = 50
text = "Rich Text"
fit_content = true

[node name="NavigationControls" parent="." instance=ExtResource("4_q53xy")]
visible = false
previous_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.8.tscn"
next_scene_path = "res://src/scenes/Lesson/Prelim/Prelim_1.10.tscn"

[node name="Prelim1_9" type="Sprite2D" parent="."]
position = Vector2(1617, 509)
scale = Vector2(1.25719, 1.21456)
texture = ExtResource("5_tiw6g")

[node name="Pause" parent="." instance=ExtResource("2_qhts8")]